--- a/style.unmin.css
+++ b/style.unmin.css
@@ -460,11 +460,8 @@ input[type="file"] {
 	left: auto;
 	height: auto;
 	opacity: 1;
-	transform: scale(1);
-}
-.dropdown-hover .main-navigation ul li:hover > ul,
-.dropdown-hover .secondary-navigation ul li:hover > ul {
 	transition-delay: 150ms;
+	transform: scale(1);
 }
 .dropdown-hover .main-navigation ul ul li:hover > ul,
 .dropdown-hover .main-navigation ul ul li.sfHover > ul,
